--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.spockframework</groupId>
   <artifactId>spock</artifactId>
   <packaging>pom</packaging>
-  <version>0.1</version>
+  <version>0.1-SNAPSHOT</version>
   <name>Spock Framework</name>
   <url>http://spockframework.org</url>
     
@@ -46,7 +46,7 @@
       <extension>
         <groupId>org.jvnet.wagon-svn</groupId>
         <artifactId>wagon-svn</artifactId>
-        <version>1.8</version>
+        <version>1.9</version>
       </extension>
     </extensions>
   </build>
@@ -62,7 +62,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.4</version>
+        <version>4.5</version>
       </dependency>
       <dependency>
         <groupId>asm</groupId>
@@ -84,13 +84,6 @@
         <artifactId>objenesis</artifactId>
         <version>1.1</version>
       </dependency>
-      <dependency>
-        <groupId>org.testfinder</groupId>
-        <artifactId>testfinder</artifactId>
-        <version>0.1</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/lib</systemPath>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -98,7 +91,7 @@
     <repository>
       <uniqueVersion>false</uniqueVersion>
       <id>spock</id>
-      <url>svn:https://spock.googlecode.com/svn/maven2</url>
+      <url>svn:https://m2repo.spockframework.org</url>
     </repository>
   </distributionManagement>
     
