--- a/trunk/spock-specks/pom.xml
+++ b/trunk/spock-specks/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.spockframework</groupId>
     <artifactId>spock</artifactId>
-    <version>0.1</version>
+    <version>0.1-SNAPSHOT</version>
   </parent>
   <groupId>org.spockframework</groupId>
   <artifactId>spock-specks</artifactId>
