--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -57,7 +57,7 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>1.6-RC-3</version>
+        <version>1.6.0</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
