--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>spock</artifactId>
   <packaging>pom</packaging>
   <version>0.1-SNAPSHOT</version>
-  <name>The Spock Framework</name>
+  <name>Spock Framework</name>
   <url>http://spockframework.org</url>
     
   <modules>
