renamed goal find-test-classes to find-specks fixed NPE in maven plugin moved package inspector to util.inspector

--- a/spock-specks/pom.xml
+++ b/spock-specks/pom.xml
@@ -32,7 +32,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>find-test-classes</goal>
+              <goal>find-specks</goal>
             </goals>
           </execution>
         </executions>
