--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <inherited>true</inherited>
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
@@ -27,10 +26,13 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <inherited>true</inherited>
           <configuration>
             <useFile>false</useFile>
           </configuration>
+        </plugin>
+		<plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+		  <version>2.4</version> <!-- 2.4 introduced skip property -->
         </plugin>
         <plugin>
           <groupId>org.codehaus.groovy.maven</groupId>
