--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -33,12 +33,12 @@
         </plugin>
 		<plugin>
       <artifactId>maven-deploy-plugin</artifactId>
-		  <version>2.4</version> <!-- 2.4 introduced skip property -->
+		  <version>2.4</version> <!-- 2.4 introduces skip property -->
         </plugin>
         <plugin>
           <groupId>org.codehaus.groovy.maven</groupId>
           <artifactId>gmaven-plugin</artifactId>
-          <version>1.0-rc-5-SNAPSHOT</version>
+          <version>1.0-rc-5</version>
           <configuration>
             <providerSelection>1.6</providerSelection>
           </configuration>
