--- a/trunk/spock-maven/pom.xml
+++ b/trunk/spock-maven/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.spockframework</groupId>
-    <artifactId>spock</artifactId>
+    <artifactId>spock-parent</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
   
@@ -10,7 +10,7 @@
   <groupId>org.spockframework</groupId>
   <artifactId>spock-maven</artifactId>
   <packaging>maven-plugin</packaging>
-  <name>Spock Framework - Maven Plugin</name>
+  <name>Spock Framework - Maven</name>
   
   <dependencies>
     <dependency>
