--- a/trunk/spock-core/pom.xml
+++ b/trunk/spock-core/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.spockframework</groupId>
     <artifactId>spock-parent</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
   </parent>
   
   <modelVersion>4.0.0</modelVersion>
