--- a/trunk/spock-specks/pom.xml
+++ b/trunk/spock-specks/pom.xml
@@ -64,5 +64,10 @@
       <groupId>org.objenesis</groupId>
       <artifactId>objenesis</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.1.108</version>
+    </dependency>
   </dependencies>
 </project>
