--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
         <artifactId>objenesis</artifactId>
         <version>1.1</version>
       </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.1.108</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
