--- a/spock-specks/build.gradle
+++ b/spock-specks/build.gradle
@@ -16,6 +16,7 @@ project(":spock-specks") {
     compile "junit:junit:4.5"
     testRuntime "cglib:cglib-nodep:2.1_3"
     testRuntime "org.objenesis:objenesis:1.1"
+    testRuntime "com.h2database:h2:1.1.108"
   }
 
   test {  
