--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -34,6 +34,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.0.2</version>
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
@@ -41,6 +42,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.4.3</version>
           <configuration>
             <useFile>false</useFile>
           </configuration>
@@ -120,8 +122,16 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>2.0-beta-9-SNAPSHOT</version>
+            <configuration>
+              <remoteTagging>true</remoteTagging>
+            </configuration>
+          </plugin>
+          <plugin>
             <artifactId>maven-source-plugin</artifactId>
-            <inherited>true</inherited>
+            <version>2.0.4</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -133,7 +143,7 @@
           </plugin>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <inherited>true</inherited>
+            <version>2.5</version>
               <configuration>
                 <links>
                   <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
