--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -124,7 +124,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-release-plugin</artifactId>
-            <version>2.0-beta-9-SNAPSHOT</version>
+            <version>2.0-beta-9</version>
             <configuration>
               <remoteTagging>true</remoteTagging>
             </configuration>
