--- a/trunk/spock-core/build.gradle
+++ b/trunk/spock-core/build.gradle
@@ -3,10 +3,12 @@ sourceCompatibility = 1.5
 targetCompatibility = 1.5 
 
 project(":spock-core") {
-  dependencies {
-    addMavenRepo()
-    
-    compile "org.codehaus.groovy:groovy-all:1.6.0"
+  repositories {
+    mavenCentral()
+  }
+  
+  dependencies {  
+    compile "org.codehaus.groovy:groovy-all:1.6.1"
     compile "asm:asm:2.2.3"
     compile "asm:asm-commons:2.2.3"
     compile "junit:junit:4.5"
