--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,24 @@
           <configuration>
             <providerSelection>1.6</providerSelection>
           </configuration>
+          <dependencies>
+          <dependency>
+            <groupId>org.codehaus.groovy.maven.runtime</groupId>
+            <artifactId>gmaven-runtime-1.6</artifactId>
+            <version>1.0-rc-5</version>
+            <exclusions>
+              <exclusion>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+              </exclusion>
+            </exclusions>
+          </dependency>
+          <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>1.6.3</version>
+          </dependency>
+        </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -69,12 +87,12 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>1.6.2</version>
+        <version>1.6.3</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.5</version>
+        <version>4.6</version>
       </dependency>
       <dependency>
         <groupId>asm</groupId>
@@ -100,6 +118,12 @@
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <version>1.1.108</version>
+      </dependency>
+<!-- build dependencies -->
+      <dependency>
+        <groupId>org.codehaus.groovy.maven</groupId>
+        <artifactId>gmaven-runtime-1.6</artifactId>
+        <version>1.0-rc-5</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
