updated to Gradle 0.6 final Maven and Gradle build improvements

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ allprojects {
   version = "0.2-SNAPSHOT"
 }
 
-//createTask("wrapper", type: Wrapper).configure { 
-//  gradleVersion = "0.4" 
-//}
+task wrapper(type: Wrapper) { 
+    gradleVersion = '0.6' 
+    jarPath = 'wrapper' 
+} 
