--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,13 @@
         <groupId>asm</groupId>
         <artifactId>asm</artifactId>
         <version>2.2.3</version>
+        <optional>true</optional>
       </dependency>
       <dependency>
         <groupId>asm</groupId>
         <artifactId>asm-commons</artifactId>
         <version>2.2.3</version>
+        <optional>true</optional>
       </dependency>
       <dependency>
         <groupId>cglib</groupId>
