updated to GMaven 1.0 experimental support for Specification base class many additional syntax checks for where-blocks improved Directive support improved JUnit compatibility bug fixes

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <plugin>
           <groupId>org.codehaus.groovy.maven</groupId>
           <artifactId>gmaven-plugin</artifactId>
-          <version>1.0-rc-5</version>
+          <version>1.0</version>
           <configuration>
             <providerSelection>1.6</providerSelection>
           </configuration>
@@ -62,7 +62,7 @@
           <dependency>
             <groupId>org.codehaus.groovy.maven.runtime</groupId>
             <artifactId>gmaven-runtime-1.6</artifactId>
-            <version>1.0-rc-5</version>
+            <version>1.0</version>
             <exclusions>
               <exclusion>
                 <groupId>org.codehaus.groovy</groupId>
