port to Groovy 1.7-beta-1 updated Maven version identifiers to 0.3-groovy-1.7-SNAPSHOT

--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -8,7 +8,7 @@ project(":spock-core") {
   }
   
   dependencies {  
-    compile "org.codehaus.groovy:groovy-all:1.6.3"
+    compile "org.codehaus.groovy:groovy-all:1.7-beta-1"
     compile "asm:asm:2.2.3"
     compile "junit:junit:4.6"
     compile "cglib:cglib-nodep:2.1_3"
