--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 allprojects {
   group = "org.spockframework"
-  version = "0.2-SNAPSHOT"
+  version = "0.3-groovy-1.7-SNAPSHOT"
 }
 
 task wrapper(type: Wrapper) { 
