--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.spockframework</groupId>
   <artifactId>spock-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.3-SNAPSHOT</version>
+  <version>0.3-groovy-1.7-SNAPSHOT</version>
   <name>Spock Framework - Parent</name>
   <url>http://spockframework.org</url>
   <description>Spock is a testing and specification framework for Java and Groovy developers.</description>
@@ -67,7 +67,7 @@
             <dependency>
               <groupId>org.codehaus.groovy</groupId>
               <artifactId>groovy-all</artifactId>
-              <version>1.6.3</version>
+              <version>1.7-beta-1</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -81,7 +81,7 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>1.6.3</version>
+        <version>1.7-beta-1</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
