--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.spockframework</groupId>
   <artifactId>spock-example</artifactId>
-  <version>0.2</version>
+  <version>0.3-groovy-1.7-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Spock Framework - Example Project</name>
 
@@ -30,7 +30,7 @@
         -->
         <groupId>org.spockframework</groupId>
         <artifactId>spock-maven</artifactId>
-        <version>0.3-SNAPSHOT</version>
+        <version>0.3-groovy-1.7-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>org.spockframework</groupId>
       <artifactId>spock-core</artifactId>
-      <version>0.3-SNAPSHOT</version>
+      <version>0.3-groovy-1.7-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>    
 <!-- Optional dependencies for using Spock -->
