--- a/spock-specks/build.gradle
+++ b/spock-specks/build.gradle
@@ -11,7 +11,7 @@ project(":spock-specks") {
   }
   
   dependencies {
-    groovy "org.codehaus.groovy:groovy-all:1.6.3"
+    groovy "org.codehaus.groovy:groovy-all:1.7-beta-1"
     compile project(":spock-core")
     compile "junit:junit:4.6"
     testRuntime "cglib:cglib-nodep:2.1_3"
