made sure that specks are run in release profile

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
       <id>release</id>
       <modules>
         <module>spock-core</module>
+        <module>spock-specks</module>
         <module>spock-maven</module>
       </modules>
       <build>
