--- a/spock-specks/pom.xml
+++ b/spock-specks/pom.xml
@@ -46,6 +46,12 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
