improved JUnit compatibility improved build scripts removed redundant examples initial Tapestry support

--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -13,5 +13,6 @@ project(":spock-core") {
     compile "junit:junit:4.6"
     compile "cglib:cglib-nodep:2.1_3"
     compile "org.objenesis:objenesis:1.1"
+    compile "org.apache.ant:ant:1.7.1"
   }
 }
