--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>spock-parent</artifactId>
   <packaging>pom</packaging>
   <version>0.3-SNAPSHOT</version>
-  <name>Spock Framework - Parent</name>
+  <name>Spock Framework - Umbrella Project</name>
   <url>http://spockframework.org</url>
   <description>Spock is a testing and specification framework for Java and Groovy applications.</description>
 
