--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include 'spock-core', 'spock-specks', 'spock-example', 'spock-tapestry'
+include 'spock-core', 'spock-specks', 'spock-example', 'spock-tapestry', 'spock-guice'
 
