--- a/spock-tapestry/pom.xml
+++ b/spock-tapestry/pom.xml
@@ -10,7 +10,7 @@
   <groupId>org.spockframework</groupId>
   <artifactId>spock-tapestry</artifactId>
   <packaging>jar</packaging>
-  <name>Spock Framework - Tapestry Support</name>
+  <name>Spock Framework - Tapestry Extension</name>
   <url>http://spockframework.org</url>
 
   <build>
