--- a/spock-guice/pom.xml
+++ b/spock-guice/pom.xml
@@ -45,6 +45,7 @@
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
       <version>2.0</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
