rearrangements, fixed build scripts

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
           <executions>
             <execution>
               <goals>
+                <goal>compile</goal>
                 <goal>testCompile</goal>
               </goals>
             </execution>
