--- a/spock-spring/pom.xml
+++ b/spock-spring/pom.xml
@@ -47,16 +47,16 @@
       <version>2.5.6.SEC01</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>2.5.6.SEC01</version>
+      <scope>provided</scope>
+    </dependency>
 <!-- test dependencies -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>2.5.6.SEC01</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
       <version>2.5.6.SEC01</version>
       <scope>test</scope>
     </dependency>
