--- a/spock-guice/build.gradle
+++ b/spock-guice/build.gradle
@@ -11,7 +11,7 @@ project(":spock-guice") {
   }
   
   dependencies {  
-    groovy "org.codehaus.groovy:groovy-all:1.6.4"
+    groovy groovyArtifact
     compile project(":spock-core")
     compile "com.google.inject:guice:2.0"
     // surfaces in the Guice API; groovyc complains if we don't add it
