--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -11,7 +11,7 @@ project(":spock-core") {
   }
   
   dependencies {  
-    groovy "org.codehaus.groovy:groovy-all:1.6.4"
+    groovy groovyArtifact
     compile "asm:asm:2.2.3"
     compile "junit:junit:4.7"
     compile "cglib:cglib-nodep:2.1_3"
