--- a/spock-spring/build.gradle
+++ b/spock-spring/build.gradle
@@ -11,7 +11,7 @@ project(":spock-spring") {
   }
   
   dependencies {  
-    groovy "org.codehaus.groovy:groovy-all:1.6.4"
+    groovy groovyArtifact
     compile project(":spock-core")
     compile "org.springframework:spring-test:2.5.6.SEC01"
     compile "org.springframework:spring-beans:2.5.6.SEC01"
