--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -39,6 +39,15 @@
           </execution>
         </executions>
       </plugin>
+<!-- Only required if default Surefire configuration is not satisfactory -->
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.4.3</version>
+        <configuration>
+          <useFile>false</useFile>
+          <enableAssertions>false</enableAssertions> <!-- workaround for http://jira.codehaus.org/browse/GROOVY-3806 -->
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
