--- a/spock-example/wrapper/gradle-wrapper.properties
+++ b/spock-example/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Jul 27 03:21:34 CEST 2009
+#Sat Oct 03 01:05:16 GMT+00:00 2009
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
