--- a/wrapper/gradle-wrapper.properties
+++ b/wrapper/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Mon Jul 20 23:55:05 CEST 2009
+#Sat Oct 03 01:05:16 GMT+00:00 2009
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.7
+distributionVersion=0.8
 zipStorePath=wrapper/dists
 urlRoot=http\://dist.codehaus.org/gradle
 distributionName=gradle
