first shot at mavenizing spock-grails

--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,6 +1,5 @@
-#Grails Metadata file
-#Tue Oct 20 09:44:49 EST 2009
+#Grails Descriptor updated by grails-maven-plugin on Thu Oct 22 00:56:08 GMT+00:00 2009
+#Thu Oct 22 00:56:08 GMT+00:00 2009
+app.version=0.3-SNAPSHOT
 app.grails.version=1.2-M3
-app.name=spock
-plugins.hibernate=1.2-M3
-plugins.tomcat=1.2-M3
+app.name=spock-grails
