solved problem where setup() in base class apparently wasn't called

--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,5 +1,7 @@
-#Grails Descriptor updated by grails-maven-plugin on Thu Oct 22 00:56:08 GMT+00:00 2009
-#Thu Oct 22 00:56:08 GMT+00:00 2009
-app.version=0.3-SNAPSHOT
+#Grails Metadata file
+#Thu Oct 22 01:16:00 GMT+00:00 2009
 app.grails.version=1.2-M3
 app.name=spock-grails
+app.version=0.3-SNAPSHOT
+plugins.hibernate=1.2-M3
+plugins.tomcat=1.2-M3
